Prevent highlight guides from overflowing page

--- a/capture/capture.css
+++ b/capture/capture.css
@@ -128,8 +128,8 @@
 .highlighter_vertical {
   position: absolute;
   display: block;
-  min-height: 100vh;
-  max-height: 100vh;
+  min-height: 100%;
+  max-height: 100%;
   top: 0px;
   z-index: 10000;
   box-sizing: border-box;
@@ -139,8 +139,8 @@
 .highlighter_horizontal {
   position: absolute;
   display: block;
-  min-width: 100vw;
-  max-width: 100vw;
+  min-width: 100%;
+  max-width: 100%;
   left: 0px;
   z-index: 10000;
   box-sizing: border-box;
